--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -12,6 +12,9 @@
 
     <h1>Diario On-line</h1>
 </header>
+<nav>
+    <a href="ej_listas.html">cocina</a>
+</nav>
 <section>
     <h3><strong>CordoBici</strong></h3>
 
