se edito tamano y color de fuente

--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
+    <style>
+        #tituloPrincipal{
+            color: #b4c5ff;
+        }
+
+        .tituloNoticia{
+            font-size: 30px;
+        }
+
+        body{
+            font-family: Constantia;
+        }
+    </style>
 </head>
-<body>
-<!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
+
 <header>
     <h1 id="tituloPrincipal">Diario On-line</h1>
 </header>
