--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -18,26 +18,52 @@
     https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
-
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
-
-Agregue un comentario:
-
-Boton de Enviar
-
-
+<form id="formulario_suscripcion">
+    <p>
+        Nombre: <input type="text" name="nombre" placeholder="nombre">
+    </p>
+    <p>
+        Apellido: <input type="text" name="apellido" placeholder="apellido">
+    </p>
+    <p>
+        Sexo: Masculino <input type="radio" name="sexo" value="masculino">
+        Femenino <input type="radio" name="sexo" value="femenino">
+    </p>
+    <p>
+        Edad: <input type="number" name="edad" placeholder="edad">
+    </p>
+    <p>
+        Email: <input type="email" name="email" placeholder="email@dominio.com">
+    </p>
+    <p>
+        Usuario: <input type="text" name="usuario" placeholder="usuario">
+    </p>
+    <p>
+        Password: <input type="password" name="pass" placeholder="password">
+    </p>
+    <p>
+        Confirmar Password: <input type="password" name="confirmar_pass" placeholder="password">
+    </p>
+    <p>
+        Tipo de servicio: Free <input type="checkbox" name="tipo_de_servicio" value="free"> /
+        Standard <input type="checkbox" name="tipo_de_servicio" value="standard"> /
+        Premium <input type="checkbox" name="tipo_de_servicio" value="premium">
+    </p>
+    <p>
+        Tema:
+        <select>
+            <option>Política</option>
+            <option>Negocios</option>
+            <option>Tecnología</option>
+            <option>Salud</option>
+        </select>
+    </p>
+    <p>
+        Agregue un comentario: <textarea> </textarea>
+    </p>
+    <p>
+        <button type="button">Boton de Enviar</button>
+    </p>
+</form>
 </body>
 </html>
