se ordeno fuentes y colores de link

--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -15,6 +15,18 @@
         body{
             font-family: Constantia;
         }
+
+        a:link, a:visited{
+            color: salmon;
+        }
+
+        a:hover{
+            font-size: 1.4em;
+        }
+
+        a:active{
+            font-weight: bold;
+        }
     </style>
 </head>
 
