--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
     <style>
-        #tituloPrincipal{
-            color: #b4c5ff;
+        #tituloPrincipal {
+            color: #9bb2ff;
         }
 
-        .tituloNoticia{
+        .tituloNoticia {
             font-size: 30px;
         }
 
-        body{
+        body {
             font-family: Constantia;
         }
 
-        a:link, a:visited{
+        a:link, a:visited {
             color: salmon;
         }
 
-        a:hover{
+        a:hover {
             font-size: 1.4em;
         }
 
-        a:active{
+        a:active {
             font-weight: bold;
         }
 
@@ -47,14 +47,16 @@
     <article>
         <div class="columna1">
             <p>
-                Un intercambio académico inspiró a Joaquín, Nicolás, Guido y Facundo para elegir el tema de su trabajo final.
+                Un intercambio académico inspiró a Joaquín, Nicolás, Guido y Facundo para elegir el tema de su trabajo
+                final.
                 Dos de ellos estuvieron el año pasado en Sevilla y se quedaron "enamorados" –palabras textuales- de su
                 sistema de bicicletas públicas; de su comodidad y rapidez, y de lo económico y saludable que resultaba.
             </p>
 
             <p>
                 Pensaron que si funcionaba en una cultura similar a la nuestra, sería posible replicarlo en Córdoba.
-                Esta iniciativa no solo se convirtió en su tesis, que les permitió hace una semana convertirse en ingenieros
+                Esta iniciativa no solo se convirtió en su tesis, que les permitió hace una semana convertirse en
+                ingenieros
                 industriales, sino que se trata de una valiosa propuesta que la Municipalidad de nuestra ciudad está
                 interesada en implementar.
             </p>
@@ -62,47 +64,58 @@
             <h5 class="tituloNoticia">Investigación innovadora</h5>
 
             <p>
-                El sistema de bicicletas compartidas no es nuevo, ya funciona en muchos lugares del mundo. En nuestro país
-                lo encontramos en Buenos Aires y Rosario. De hecho en esas ciudades los ingenieros realizaron gran parte de
+                El sistema de bicicletas compartidas no es nuevo, ya funciona en muchos lugares del mundo. En nuestro
+                país
+                lo encontramos en Buenos Aires y Rosario. De hecho en esas ciudades los ingenieros realizaron gran parte
+                de
                 su investigación, que es lo innovador.
             </p>
 
             <p>
-                Estudiaron su procedimiento, relevaron funcionamientos, contactaron proveedores y mantuvieron contacto con
-                la Municipalidad de Córdoba para conocer el escenario en donde se implementaría el proyecto.  A partir de
+                Estudiaron su procedimiento, relevaron funcionamientos, contactaron proveedores y mantuvieron contacto
+                con
+                la Municipalidad de Córdoba para conocer el escenario en donde se implementaría el proyecto. A partir de
                 esta información estadística diseñaron un sistema para optimizar lo que ya existe. “Lo que han hecho es
-                mejorar la propuesta, agregando un know how”, explica Henry Martínez, coordinador de la carrera y director
+                mejorar la propuesta, agregando un know how”, explica Henry Martínez, coordinador de la carrera y
+                director
                 de la tesis.
             </p>
         </div>
         <div class="columna2">
             <p>
-                Gracias a una profunda investigación comercial, sumada a una simulación realizada por un programa llamado
-                anylogic, consiguieron localizar de manera estratégica 19 estaciones con 280 bicicletas, en Nueva Córdoba y
+                Gracias a una profunda investigación comercial, sumada a una simulación realizada por un programa
+                llamado
+                anylogic, consiguieron localizar de manera estratégica 19 estaciones con 280 bicicletas, en Nueva
+                Córdoba y
                 Ciudad Universitaria.
             </p>
 
             <p>
-                Además, plantearon un sistema de mantenimiento in situ y preventivo que permitiría reducir de manera notable
+                Además, plantearon un sistema de mantenimiento in situ y preventivo que permitiría reducir de manera
+                notable
                 las roturas de las bicicletas, evitando así accidentes y descontento por parte de los usuarios.
             </p>
 
             <p>
-                Este sistema se diferencia de los otros de nuestro país al incorporar un sistema de información geográfica,
-                el cual, de acuerdo a la variación de la demanda, la pendiente y el flujo de gente, simula el funcionamiento
+                Este sistema se diferencia de los otros de nuestro país al incorporar un sistema de información
+                geográfica,
+                el cual, de acuerdo a la variación de la demanda, la pendiente y el flujo de gente, simula el
+                funcionamiento
                 del mismo. De esta forma, se determina la ubicación ideal de las estaciones y la cantidad óptima de
                 bicicletas en cada una de ellas, previo a la implementación.
             </p>
 
             <p>
-                Por su parte, otros alumnos de la Facultad de Ingeniería estarían desarrollando el soft para complementar
-                el sistema con el programa que permite hacer el pedido.  Se trata de una aplicación para que la bici se
+                Por su parte, otros alumnos de la Facultad de Ingeniería estarían desarrollando el soft para
+                complementar
+                el sistema con el programa que permite hacer el pedido. Se trata de una aplicación para que la bici se
                 destrabe cuando se manda un mensaje de texto.
             </p>
 
             <p>
                 Esta propuesta mejoraría notablemente no solo la movilidad de los habitantes de Córdoba, sino también su
-                calidad de vida, porque impactará directamente en su salud física y mental, le ahorrará tiempo de traslado
+                calidad de vida, porque impactará directamente en su salud física y mental, le ahorrará tiempo de
+                traslado
                 y gastos de transporte. De esta manera, la iniciativa de nuestros ingenieros es un valioso aporte a la
                 sustentabilidad de los ciudadanos de nuestra ciudad.
             </p>
