--- a/Ejercicios-JavaScript/juego/pong.html
+++ b/Ejercicios-JavaScript/juego/pong.html
@@ -9,7 +9,9 @@
     </style>
 </head>
 <body>
-<canvas id= "pongCnavas" width="480" height="320"></canvas>
+<canvas id= "pongCnavas" width="480" height="320">
+
+</canvas>
 
 <script>
     var canvas = document.getElementById("pongCanvas") ;
