--- a/Ejercicios-CSS/ej_instagram2.html
+++ b/Ejercicios-CSS/ej_instagram2.html
@@ -10,58 +10,50 @@
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
     <style>
-        @media (max-width: 600px) {
-            body {
-                column-count: 1;
-            }
-        }
-
-        @media (min-width: 601px) {
-            body {
-                column-count: 3;
-
-            }
-        }
 
         img {
             width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-
 <div>
-    <div>
-        <img src="imagenes/satoshito89_01.png">
-    </div>
-    <div>
-        <img src="imagenes/satoshito89_02.png">
-    </div>
-    <div>
-        <img src="imagenes/satoshito89_03.png">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-2 col-md-4 col-sm-12">
+                <img src="imagenes/satoshito89_01.png">
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12">
+            <img src="imagenes/satoshito89_02.png">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12">
+            <img src="imagenes/satoshito89_03.png">
+        </div>
     </div>
 </div>
 
-<div>
-    <div>
+<div class="row">
+    <div class="col-md-4 col-sm-12">
         <img src="imagenes/satoshito89_04.png">
     </div>
-    <div>
+    <div class="col-md-4 col-sm-12">
         <img src="imagenes/satoshito89_05.png">
     </div>
-    <div>
+    <div class="col-md-4 col-sm-12">
         <img src="imagenes/satoshito89_06.png">
     </div>
 </div>
 
-<div>
-    <div>
+<div class="row">
+    <div class="col-md-4 col-sm-12">
         <img src="imagenes/satoshito89_07.png">
     </div>
-    <div>
+    <div class="col-md-4 col-sm-12">
         <img src="imagenes/satoshito89_08.png">
     </div>
-    <div>
+    <div class="col-md-4 col-sm-12">
         <img src="imagenes/satoshito89_09.png">
     </div>
 </div>
