--- a/Ejercicios-HTML/ej_listas.html
+++ b/Ejercicios-HTML/ej_listas.html
@@ -34,7 +34,7 @@
     <li>Pintarles el borde con dulce y pasarlos por coco rallado.</li>
 </ol>
 
-<img src="imagenes/foto_alfajores.jpg">
+<img src="imagenes/foto_alfajores.jpg" alt="alfajores de maicena">
 
 </body>
 </html>
